Small changes to deploy on webfaction

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,7 @@ circle {
 
     <h1>Hello World using d3.js &amp; Flask</h1>
 
+    <p>Taken from Dan F.M.'s <a href="https://github.com/dfm/flask-d3-hello-world">flask-d3-hellow-world</a> and forked <a href="https://github.com/cranmer/flask-d3-hello-world">here</a>.
     <div id="info">
         <div id="point-info">
             Click on a point.
