--- a/templates/gaus.html
+++ b/templates/gaus.html
@@ -8,6 +8,10 @@
     <script src="http://d3js.org/d3.v2.js"></script>
     <style>
 
+#intro  {
+    padding:3em;
+}
+
 path.line {
     fill: none;
     stroke: #666;
@@ -49,7 +53,11 @@ circle {
 </head>
 <body>
 
+<a href="https://github.com/cranmer/flask-d3-hello-world"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+
+
     <h1>Simple example using d3.js &amp; Flask</h1>
+    <div id="intro">This webpage uses d3 to draw some circles.  The data are generated on the fly by a simple flask application.  You can update the mean of the (x,y) pairs with the form.  This info is passed via ?mux=&lt;value&gt;&amp;muy=&lt;value&gt; which flask grabs, passes in rendering the template (which is used to fill out the form and in the all-important url to fetch the data via a d3.json() call. Of course, d3 coudl easily generate some random data by itself, but that's not the point of the exercise.</div>
 
 
     {% if mux %}
