oops, didn't change url consistently

--- a/templates/gaus.html
+++ b/templates/gaus.html
@@ -62,7 +62,7 @@ circle {
 
     {% if mux %}
       <p>The point cloud has a mux={{mux}} muy={{muy}}</p>
-        <form action="gaus">
+        <form action="/">
             mean x = <input type="text" name="mux" value="{{mux}}">
             mean y = <input type="text" name="muy" value="{{muy}}">
             <input type="submit" value="Submit">
