fixing url inconsistency

--- a/templates/gaus.html
+++ b/templates/gaus.html
@@ -69,7 +69,7 @@ circle {
         </form>
     {% else %}
       <p>The point cloud has a mux=3. muy=3.</p>
-        <form action="gaus">
+        <form action="">
             mean x = <input type="text" name="mux" value="3.">
             mean y = <input type="text" name="muy" value="3.">
             <input type="submit" value="Submit">
